--- a/docs/usecases_documentation/US 5.1.1/US1001.md
+++ b/docs/usecases_documentation/US 5.1.1/US1001.md
@@ -1,9 +1,55 @@
 # US 1001 - As Customer Manager I want to register a customer and that the system automatically creates a user for that customer
 
-[Requirements Engineering](01.requirements-engineering/FR1001.md)
+## 1. Context
 
-[Analysis](02.analysis/FR1001_Analysis.md)
+*Implemented for the first time*
 
-[Design](03.design/FR1001_Design.md)
+## 2. Requirements Engineering
 
-[Tests & Implementation ](04.tests-and-implementation/FR1001_Implementation.md)
+### 2.1 User Story Description
+
+**5.1.17** As Customer Manager I want to register a customer and that the system automatically creates a user for that customer
+
+### 2.2 Client Specifications and Clarifications
+
+### 2.3 Acceptance Criteria
+
+* Backoffice users (e.g., doctors, nurses, technicians) are registered by an Admin via an internal
+process, not via self-registration.
+* Admin assigns roles (e.g., Doctor, Nurse, Technician) during the registration process.
+* Registered users receive a one-time setup link via email to set their password and activate their
+account.
+* The system enforces strong password requirements for security.
+* A confirmation email is sent to verify the user’s registration.
+* 
+## 3.Design
+
+### 3.1 System Sequence Diagram (SSD)
+
+#### 3.1.1 Level 1
+![ssd](lvl1/ssd.png)
+
+#### 3.1.2 Level 2
+![ssd](lvl2/ssd.png)
+
+#### 3.1.1 Level 3
+![ssd](lvl3/ssd.png)
+
+
+## 4.User Interface
+
+### 4.1 Input Data
+
+* Typed data:
+    * Name
+    * Email
+    * Role
+
+### 4.2 Output Data
+
+* Registered User
+* (In)Success of the operation
+
+### 5. Dependencies/References
+* n/a
+ 
