--- a/docs/usecases_documentation/US 5.1.20/US5_1_20.md
+++ b/docs/usecases_documentation/US 5.1.20/US5_1_20.md
@@ -1,4 +1,4 @@
-# US 5.1.3 - As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+# US 5.1.20 - As an Admin, I want to add new types of operations, so that I can reflect the available medical procedures in the system
 
 ## 1. Context
 
@@ -8,17 +8,19 @@
 
 ### 2.1 User Story Description
 
-**5.1.3** As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+**5.1.20** As an Admin, I want to add new types of operations, so that I can reflect the available medical procedures in the system
 
 ### 2.2 Client Specifications and Clarifications
 
 ### 2.3 Acceptance Criteria
 
-* Patients can self-register using the external IAM system.
-* During registration, patients provide personal details (e.g., name, email, phone) and create a
-profile.
-* The system validates the email address by sending a verification email with a confirmation link.
-* Patients cannot list their appointments without completing the registration process.
+* Admins can add new operation types with attributes like:
+* Operation Name
+* Required Staff by Specialization
+* Estimated Duration
+* The system validates that the operation name is unique.
+* The system logs the creation of new operation types and makes them available for scheduling
+immediately.
 
 ## 3.Design
 
