--- a/docs/usecases_documentation/US 5.1.21/US5_1_21.md
+++ b/docs/usecases_documentation/US 5.1.21/US5_1_21.md
@@ -1,4 +1,4 @@
-# US 5.1.3 - As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+# US 5.1.21 - As an Admin, I want to edit existing operation types, so that I can update or correct information about the procedure
 
 ## 1. Context
 
@@ -8,17 +8,18 @@
 
 ### 2.1 User Story Description
 
-**5.1.3** As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+**5.1.21** As an Admin, I want to edit existing operation types, so that I can update or correct information about the procedure
 
 ### 2.2 Client Specifications and Clarifications
 
 ### 2.3 Acceptance Criteria
 
-* Patients can self-register using the external IAM system.
-* During registration, patients provide personal details (e.g., name, email, phone) and create a
-profile.
-* The system validates the email address by sending a verification email with a confirmation link.
-* Patients cannot list their appointments without completing the registration process.
+* Admins can search for and select an existing operation type to edit.
+* Editable fields include operation name, required staff by specialization, and estimated
+  duration.
+* Changes are reflected in the system immediately for future operation requests.
+* Historical data is maintained, but new operation requests will use the updated operation type
+  information.
 
 ## 3.Design
 
