--- a/docs/usecases_documentation/US 5.1.22/US5_1_22.md
+++ b/docs/usecases_documentation/US 5.1.22/US5_1_22.md
@@ -1,4 +1,4 @@
-# US 5.1.3 - As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+# US 5.1.22 - As an Admin, I want to remove obsolete or no longer performed operation types, so that the system stays current with hospital practices.
 
 ## 1. Context
 
@@ -8,17 +8,17 @@
 
 ### 2.1 User Story Description
 
-**5.1.3** As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+**5.1.22** As an Admin, I want to remove obsolete or no longer performed operation types, so that the system stays current with hospital practices.
 
 ### 2.2 Client Specifications and Clarifications
 
 ### 2.3 Acceptance Criteria
 
-* Patients can self-register using the external IAM system.
-* During registration, patients provide personal details (e.g., name, email, phone) and create a
-profile.
-* The system validates the email address by sending a verification email with a confirmation link.
-* Patients cannot list their appointments without completing the registration process.
+* Admins can search for and mark operation types as inactive (rather than deleting them) to
+  preserve historical records.
+* Inactive operation types are no longer available for future scheduling but remain in historical
+  data.
+* A confirmation prompt is shown before deactivating an operation type.
 
 ## 3.Design
 
