--- a/docs/usecases_documentation/US 5.1.23/US5_1_23.md
+++ b/docs/usecases_documentation/US 5.1.23/US5_1_23.md
@@ -1,4 +1,4 @@
-# US 5.1.3 - As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+# US 5.1.23 - As an Admin, I want to list/search operation types, so that I can see the details, edit, and remove operation types
 
 ## 1. Context
 
@@ -8,17 +8,17 @@
 
 ### 2.1 User Story Description
 
-**5.1.3** As a Patient, I want to register for the healthcare application, so that I can create a user profile and book appointments online
+**5.1.23** As an Admin, I want to list/search operation types, so that I can see the details, edit, and remove operation types
 
 ### 2.2 Client Specifications and Clarifications
 
 ### 2.3 Acceptance Criteria
 
-* Patients can self-register using the external IAM system.
-* During registration, patients provide personal details (e.g., name, email, phone) and create a
-profile.
-* The system validates the email address by sending a verification email with a confirmation link.
-* Patients cannot list their appointments without completing the registration process.
+* Admins can search and filter operation types by name, specialization, or status
+  (active/inactive).
+* The system displays operation types in a searchable list with attributes such as name, required
+  staff, and estimated duration.
+* Admins can select an operation type to view, edit, or deactivate it.
 
 ## 3.Design
 
